recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:11: error: value ^ is not a member of Double
      polygonFractal(levels-1,sides,length*(shrink^2),shrink)
                                                  ^